--- a/Pipfile
+++ b/Pipfile
@@ -5,8 +5,10 @@ verify_ssl = true
 
 [dev-packages]
 flask = "*"
+sqlalchemy = "*"
 
 [packages]
+marshmallow = "*"
 
 [requires]
 python_version = "3.8"
